[gd_scene load_steps=37 format=3 uid="uid://cislrni88xiwo"]

[ext_resource type="Script" uid="uid://q11b5m04ifma" path="res://Script/UI/main_menu.gd" id="1_3hhv6"]
[ext_resource type="Texture2D" uid="uid://s5r3kijshyab" path="res://Asset/Image/Song_Background/Eternal_City/main_menu.png" id="2_3hhv6"]
[ext_resource type="Texture2D" uid="uid://8775dqtvv0gq" path="res://Asset/Image/PS_song_selection.png" id="2_ga64o"]
[ext_resource type="PackedScene" uid="uid://dg2idlh7ls536" path="res://Sence/UI/A_Song_Container.tscn" id="2_ihwt8"]
[ext_resource type="Resource" uid="uid://cevve37isx7t6" path="res://Resource/Level/Person_in_the_Darkness.tres" id="3_ihwt8"]
[ext_resource type="Texture2D" uid="uid://doohcfye3ea4n" path="res://Asset/Image/EC_logo-removebg-preview.png" id="3_qmjju"]
[ext_resource type="Texture2D" uid="uid://fksyxybqafx" path="res://Asset/Image/PS_log-removebg-preview.png" id="4_8eml5"]
[ext_resource type="Resource" uid="uid://xd0f8m408v41" path="res://Resource/Level/God_chess_board.tres" id="5_meewa"]
[ext_resource type="Resource" uid="uid://djijwxpurgutm" path="res://Resource/Level/Main_theme.tres" id="6_3hhv6"]
[ext_resource type="Texture2D" uid="uid://bscmm7tqthfoy" path="res://Asset/Image/Song_Background/Eternal_City/God's_ChessBoard.png" id="7_meewa"]
[ext_resource type="Resource" uid="uid://bb8pt65yp77x7" path="res://Resource/Level/Meaning_of_Sacrifire.tres" id="8_ev0b4"]
[ext_resource type="Resource" uid="uid://co8pdrpnqkylp" path="res://Resource/Level/EvnyBaby.tres" id="10_8eml5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6ooy"]
bg_color = Color(6.73831e-07, 0.680378, 0.587407, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uplus"]
bg_color = Color(0, 0.33125, 0.282419, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulkte"]
bg_color = Color(0.00392157, 1, 0.866667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qmjju"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8eml5"]
texture = ExtResource("3_qmjju")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cm1jk"]
texture = ExtResource("4_8eml5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js0dy"]
bg_color = Color(0.388235, 0.34902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys6p4"]
bg_color = Color(1, 0.333333, 0.670588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cm1jk"]
bg_color = Color(0.388235, 0.34902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxk5r"]
bg_color = Color(0.388235, 0.34902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ror7b"]
bg_color = Color(0.388235, 0.34902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klyq2"]
bg_color = Color(0.388235, 0.34902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8lir"]
bg_color = Color(0.388235, 0.34902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6e1d"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_meewa"]
bg_color = Color(0.674815, 0.674815, 0.674815, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.211765, 0.376471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hhv6"]
bg_color = Color(0.329158, 0.329158, 0.329158, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.211765, 0.376471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ev0b4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.211765, 0.376471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmjju"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_color = Color(0.351563, 0.351563, 0.351563, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47asy"]
bg_color = Color(0.419813, 0.419813, 0.419813, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439049, 0.439049, 0.439049, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88h74"]
bg_color = Color(0.212305, 0.212305, 0.212305, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439049, 0.439049, 0.439049, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnhti"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439049, 0.439049, 0.439049, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ertlw"]
bg_color = Color(0.00667891, 0.753512, 0.665228, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.427493, 0.427493, 0.427493, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd3df"]
bg_color = Color(0.00362215, 0.454241, 0.39989, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.266575, 0.266575, 0.266575, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8eml5"]
bg_color = Color(0.0313726, 0.988235, 0.87451, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.683077, 0.683077, 0.683077, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main_menu" type="Control" groups=["main_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3hhv6")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="MainBackground" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3hhv6")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnitContainer" type="ScrollContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/UnitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/UnitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="AllSongButton" type="Button" parent="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_d6ooy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uplus")
theme_override_styles/normal = SubResource("StyleBoxFlat_ulkte")

[node name="Label" type="Label" parent="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer/AllSongButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_qmjju")
text = "All"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EternalCitySongButton" type="Button" parent="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_d6ooy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uplus")
theme_override_styles/normal = SubResource("StyleBoxFlat_ulkte")

[node name="Label" type="Label" parent="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer/EternalCitySongButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_8eml5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProjectSekaiSongButton" type="Button" parent="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_d6ooy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uplus")
theme_override_styles/normal = SubResource("StyleBoxFlat_ulkte")

[node name="Label" type="Label" parent="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer/ProjectSekaiSongButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_cm1jk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SongContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer"]
layout_mode = 2

[node name="SongsContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PersonInTheDarknes" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer/SongsContainer" instance=ExtResource("2_ihwt8")]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_js0dy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ys6p4")
theme_override_styles/normal = SubResource("StyleBoxFlat_cm1jk")
SongInfo = ExtResource("3_ihwt8")

[node name="MainTheme" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer/SongsContainer" instance=ExtResource("2_ihwt8")]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_vxk5r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ys6p4")
theme_override_styles/normal = SubResource("StyleBoxFlat_ror7b")
SongInfo = ExtResource("6_3hhv6")
Id = 1

[node name="GodChessBoard" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer/SongsContainer" instance=ExtResource("2_ihwt8")]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_klyq2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ys6p4")
theme_override_styles/normal = SubResource("StyleBoxFlat_c8lir")
SongInfo = ExtResource("5_meewa")
Id = 2

[node name="MeaingOfSacrifire" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer/SongsContainer" instance=ExtResource("2_ihwt8")]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_klyq2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ys6p4")
theme_override_styles/normal = SubResource("StyleBoxFlat_c8lir")
SongInfo = ExtResource("8_ev0b4")
Id = 2

[node name="EnvyBaby" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongContainer/MarginContainer/SongsContainer" instance=ExtResource("2_ihwt8")]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_klyq2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ys6p4")
theme_override_styles/normal = SubResource("StyleBoxFlat_c8lir")
SongInfo = ExtResource("10_8eml5")
Id = 2

[node name="SongInfoContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer"]
custom_minimum_size = Vector2(410, 410)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s6e1d")

[node name="SongBigImage" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_meewa")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="EasyButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.27451, 0.278431, 0.313726, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_meewa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3hhv6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ev0b4")
text = "EASY"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NormalButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.27451, 0.278431, 0.313726, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_meewa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3hhv6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ev0b4")
text = "NORMAL"
autowrap_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HardButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.27451, 0.278431, 0.313726, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_meewa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3hhv6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ev0b4")
text = "HARD"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ExpertButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.27451, 0.278431, 0.313726, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_meewa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3hhv6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ev0b4")
text = "EXPERT"

[node name="MarginContainer5" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MasterButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SongInfoContainer/Panel/SongBigImage/MarginContainer/VBoxContainer/MarginContainer5"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.27451, 0.278431, 0.313726, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_meewa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3hhv6")
theme_override_styles/normal = SubResource("StyleBoxFlat_ev0b4")
text = "MASTER"

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qmjju")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SetSongBackgroundButton" type="Button" parent="HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_47asy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_88h74")
theme_override_styles/normal = SubResource("StyleBoxFlat_jnhti")
text = "MV
"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_ertlw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bd3df")
theme_override_styles/normal = SubResource("StyleBoxFlat_8eml5")
text = "Play"

[node name="PsSongSelection" type="Sprite2D" parent="."]
position = Vector2(-434, 195)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ga64o")

[connection signal="pressed" from="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer/AllSongButton" to="." method="_on_all_song_button_pressed"]
[connection signal="pressed" from="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer/EternalCitySongButton" to="." method="_on_eternal_city_song_button_pressed"]
[connection signal="pressed" from="HBoxContainer/UnitContainer/MarginContainer/VBoxContainer/ProjectSekaiSongButton" to="." method="_on_project_sekai_song_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer2/SetSongBackgroundButton" to="." method="_on_set_song_background_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
